@@ -123,6 +123,12 @@ class TestErrors(TestCaseWithTransport):
         error = errors.InstallFailed([None])
         self.assertEqual("Could not install revisions:\nNone", str(error))
 
+    def test_jail_break(self):
+        error = errors.JailBreak("some url")
+        self.assertEqualDiff("An attempt to access a url outside the server"
+            " jail was made: 'some url'.",
+            str(error))
+
     def test_lock_active(self):
         error = errors.LockActive("lock description")
         self.assertEqualDiff("The lock for 'lock description' is in use and "
